--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dukaan-clone",
   "private": true,
+  "homepage": "https://omnalamwar.github.io/dukaan-clone",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
